# camera_calibration_panda

./: CMakeLists.txt  README.md  config  depth_scale.cfg  imgui.ini  package.xml  rig-1.xml
debugger3d/: CMakeLists.txt  Tupfile  Tuprules.tup  debugger  debugger3d.tup  imgui.ini
debugger3d/.tup/: db
debugger3d/src/: CMakeLists.txt  Tupfile  camerasensor.cpp  main.cpp  pointcloud-view.cpp
debugger3d/src/common/: Utility.hpp  util.cpp  util.hpp
debugger3d/src/graphics/: CMakeLists.txt  Camera.cpp  Cube.cpp  Display.cpp  Display.hpp  DisplaySettings.cpp  RenderBundle.h  Tupfile  coord_frame.cpp  coord_frame.hpp  glarray.c  glarray.h  grid.cpp  grid.hpp  texture.c
debugger3d/src/imgui/: Tupfile
debugger3d/src/input/: InputHandler.cpp  InputHandler.hpp
debugger3d/src/model/: mesh.h  model.h
debugger3d/src/robot/: Tupfile
debugger3d/src/shaders/: pointcloud.fs  pointcloud.vs
debugger3d/src/visualization/: Tupfile  visualization.cpp  visualization.hpp
launch/: main.launch  test.launch
res/: bTc.csv  board-6x4.odt  cTch_ver.csv  depth_scale.cfg  eTch-747612060748.csv  eTch-810512060827.csv  eTch.csv
res/calib-dataset/: bTe.csv  cTch.csv  cTch1.csv  cTch2.csv
res/calib-dataset-test/: cTch.csv
res/calib-dataset1/: bTe.csv  cTch.csv  depth_scale.cfg
res/calib-dataset3/: bTc_747612060748.csv  bTc_810512060827.csv  bTe.csv  cTch-747612060748.csv  cTch_810512060827.csv  estimate_camera_pose.m
res/calib-dataset4/: bTc_747612060748.csv  bTe.csv  cTch_747612060748.csv
res/calib-dataset5/: bTc_747612060748.csv  bTc_810512060827.csv  bTe.csv  cTch_747612060748.csv  cTch_810512060827.csv  estimate_camera_pose.m
res/dataset1/: cTch_626206003172.csv  camera_properties.csv
res/dataset2/: bTc_626206003172.csv  bTc_627203004960.csv  bTe.csv  cTch_626206003172.csv  cTch_627203004960.csv
res/dataset3/: camera_properties.csv
res/dataset7/: cTch_627203004960.csv  camera_properties.csv
src/: Tupfile  andreff.m  avg_quat.py  calib_config.cpp  calib_config.hpp  calib_manual.cpp  calibration.cpp  calibration.hpp  camerasensor.cpp  camerasensor.hpp  capture.cpp  estimate-camera-pose.cpp  estimate_camera_pose.m  gen-charuco-board.cpp  main.cpp  manual_pose_pub.cpp  panda_status.h  pose-collection.cpp  robot_commander.cpp  util.cpp  util.hpp  ver.cpp  verification  verification.cpp  verification_pcloud.cpp
src/common/: utility.cpp  utility.hpp
